Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberBoolean.quorum
number n = cast(number, true)
output n