Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjUndefined.quorum
Integer x = undefined
Integer i = cast(Integer, x)